# dibhashi

./: .gitignore  README.md  package-lock.json  pyproject.toml  sample.md  tailwind.config.js
src/dibhashi/: app.py
src/dibhashi/static/traning/: Sentence-pairs-in-English-Bengali-data.json  all-data.json  banglanmt_data.json  data.json  emdad.json  emon.json  hridoy.json  monir.json  our-all-data.json  sadia.json  sample-video  test-data.json
src/dibhashi/templates/: header.html  index copy.html  index.html  layout.html  traning.html
src/dibhashi/utils/: bangla_tts.py  download_media.py  download_youtube_audio.py  merge.py  synthesis.py  traning.py  transcription.py  translation.py  utils.py
